@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile install prepare
-DEPEND=app-arch/unzip
-DESCRIPTION=A new GUI for the Mosflm crystallographic data processing tool
-EAPI=4
-HOMEPAGE=http://www.mrc-lmb.cam.ac.uk/harry/imosflm
-KEYWORDS=amd64 ~ppc x86 ~amd64-linux ~x86-linux
-LICENSE=ccp4
-RDEPEND=dev-lang/tcl:0 >=dev-tcltk/itcl-3.3 >=dev-tcltk/itk-3.3 >=dev-tcltk/iwidgets-4 >=dev-tcltk/tdom-0.8 >=dev-tcltk/tkimg-1.3 >=dev-tcltk/tktreectrl-2.1 dev-tcltk/anigif dev-tcltk/combobox dev-tcltk/tablelist >=sci-chemistry/mosflm-7.0.4
-SLOT=0
-SRC_URI=http://www.mrc-lmb.cam.ac.uk/harry/imosflm/ver105/downloads/imosflm-1.0.5.zip
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=929c39063ac46b6bc7e974b40c910148
