@@ -1,7 +1,29 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 AUX apbs-1.4.1-manip.patch 1522 SHA256 155c6fcd777c1c00e313bbdae60b6ccf373af0d50b05398d928bb7662378801c SHA512 b2517b86b688091a9ae6a78132e8cd5a451eff6150211459dae6919bf2ee61edcf2cf1b95d8b2922050a3a7a3aaaa9ce8e2be6766116a1e66d413339b291326b WHIRLPOOL a215daf24985d7847210b4286a662b461d5c4b714a5585eb21b781911f95853c41c1f40109e53d6f8008c0c5c291c0d8b4f06044bf767d6049bff3e6167162c2
 AUX apbs-1.4.1-multilib.patch 3301 SHA256 21c1934eb5694737d6049eb8da868ee81f15ff86dacc09f89f0024c263929ddc SHA512 cdd72fd23a57ee8413f72bf674ae246543b1c9f326727ff07c3b8848d59f98ab7d2daf28677460cb4726f919832079c1d280bcdc86a8bef5c0875583c789b7c0 WHIRLPOOL 07ae32ecd14c21d3cce59bb904533faa1b9de532d6411176d5ee2d52ed91ef6da88b52cec0ef7b989dab253300a9d89182ddc25323347a48eb8d3355c16cb3a4
 AUX apbs-1.4.1-python.patch 4109 SHA256 793257f3581c768951c27742ecf299f462fbc7fc78635e2d7c8dd0ade69c9738 SHA512 369c0fa08187ba80d8ce72542fc2942f28426beed39619dd6a90a9ef8dfecb47ea6dc7aa20994629a69d63b55d72d1f837c442744bf5499a942bf312f6723092 WHIRLPOOL 39d2445e7d3ed1974dffeaad4c0772238cf6e508f4e002636c833921f124fe7d7d9732d23a7ffc5341815152d4ddc6cd0565bebc46988caf7f742bb2f3031033
 DIST apbs-1.4.1.zip 37999283 SHA256 1156c44fb65bb7c884801f3111ca1cdb1dfba6f5308226587db112aac4969027 SHA512 3a127af3940054e5a43b3c0c620507f4f9baa69049e5a0933d8e8825458ad2faba840392752de49fe68d91e2054fb1394cf87bb5bb1c0b48305368e2f404cf6a WHIRLPOOL 6729571f13c953ec0bcf90da73ef0c39cf769f1498a767d3280de3ffbeea18eda718373efca0468436c4b18357fe450865f661daba79eeb66778c572c43ff39a
-EBUILD apbs-1.4.1-r2.ebuild 3205 SHA256 4d8842d9ffae93170d6c6b18a3b38d41174912dabd83b8e9bea2c7e404e57a5b SHA512 ebdc2ebbe416783857975121c9aad4d4720fe7638c7ce716e453092cc05c7d07845b8538a1a69a8f5e35d121a98b5ccddac5ac3f08d32239816e06fefd735a8b WHIRLPOOL 52d233c5383a7764c2dbaecdb754cb191dea70ab46c7b18a19f699a7870173c0eb932a3e3e4a5b06bdc955f1ca4874eb990afcd303e58cb80da2c352953de520
-MISC ChangeLog 14698 SHA256 645490cbfcb7862b356f43b3a4aed3714fd2dcd8f6154840e55be50cd57bee21 SHA512 6a486a12069f76992c0f4ae944c85d937187c2adfc369f01e5ec86f932388537ab93507824c58417d57097203360de9235024d405b72414215567a5b65fcf101 WHIRLPOOL fc1c229db9858e5ccdbbd4e1203004fbd9a070883c8c4e664d1b800b5db78747cb626f88a23ef0c76a82e14efe03b3e0ac8f4790427e8284c9ca813d11080297
+EBUILD apbs-1.4.1-r2.ebuild 3229 SHA256 2dea258f674ede09726a5ef3235d628e55e4e89a6ef1639a7d55326c96d6b37e SHA512 0820629af8d5436e3efbfb6ea3f5e8748e5426ebad6fcf68a6bbecea07fb1f66f01d5c587e4008aac88e20bf43e853be4ddca03817bb26c6b93aee7c369cbd7d WHIRLPOOL a8bd0c9d065572665589380812d7b28bb998a5688cd1ddca908520602a5e1b8f526df88bd308d66f0de47e08637d885eda720297f23d85cebcb5296b5d08cf20
+MISC ChangeLog 14824 SHA256 b1a615bb8bed5a1d101dd74d47a193a02c99841cee1f9a9aa7610d524c478be8 SHA512 d07bc5197b2e015b705fb1e98c1520152563e9e27581344a544fc12fa227811a30da6bfd94cece054347057726821f1173d5530eb4278f8aff1ed50e2781a721 WHIRLPOOL 83cc9763efb8062d8badc10756f9c413f2146065bf0565488b56f6c189c523b604efe5a0e6eb8a7808ab2b04e3bb2343414fda00bdd1228de110179fde8ebf6f
 MISC metadata.xml 1035 SHA256 8aa408e19b266a2e5e3c95f72048d396be214dbbdee50c75bf329121e33183d2 SHA512 6d4cf462bffdbbc8f7eeff902f5e99dcf58b694bce784816b2f4d380e1ae1dd4941ffa63d660c57c1e96bdbc4f937b75a3146e434838d2fdaec0a945d12d3149 WHIRLPOOL 0cc25ea9b62a00f265026406cdfdf91ca216b680651970fce249821ccc4cdd90421d9873ecc78e387c0abbb1620e292c737c60caaedce3d2f4070360c3d43996
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.1
+
+iQJ8BAEBCgBmBQJVxH3KXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
+OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiE18P/RX51YDqiCdYqvTXvcY+4dgM
+dE4+Ku6QVbNngcxggILd0k1hKXqdprzis/OPUgukVXjNz0IoXM9WKZ2wSUDJpivM
+NxStqlTSPDwkqCigG++NX8CHVpcH3TcphwEf8yuNq04MW777KMBg/Ap7BF0c1c2j
+N9NEjhGwcvLf6e3OcZRbNONPtGLdxLXR5pcDmxJZaZlOtPiT0hL7E6dejR3/zGlP
+b3hi9AceZFTcAXo8H0KIIUes1OO6SYAC0MkUSIZ5eDZROsutMmDaxQQPdc8o6aHl
+Vq9iN2Hcas29E80Ip0+NoJKjR0EUBVviwusTuTlYFNiQRPKJ/CsPs4YzeEbVXCm8
+FcnZHhm7mkRjuTSF5iJzp38neSP0bIIYVll1pfsKlMs8xAviggUvPqbzHYjlSG9E
+Yb4T1OZC3bmjwG9D/dWWc4Y8DfHtSjVY6bEzVL/ibDMWu2Nv8YfSBvJvbf39kUTQ
+7KswOQcLm0sUyLrsQLu0eUDulpu/f5gCSkPrCrxJiZxXA08k75nfrxXAuBm1XrWa
+1M73MmBhzWT9MugLZK4edQiGfvuVycByHNThxhXGl0dHYW7vwtifp8AEiqOJl9Gv
+6VeLpQKV01DCQ5kcxzKdBLN4cPrA6pc4zHconi0VRZiCjCGalc+UE2A4skhPi1sv
+DrSbjDKCvbYsN7Di/qf6
+=q107
+-----END PGP SIGNATURE-----
