@@ -1,29 +1,29 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX 1.0.4-impl-dec.patch 277 SHA256 061dd0d4faa772916ba4cd966da1ef49bc240c5254c9180237efac711d23108b SHA512 71f25c111febe4f384cb34522aee46e143721109d9ac114639d479504511f33a1bab5e64dc31dd7a4163deb6e1b2b06dc5c6078f298721de565798dde9f179d1 WHIRLPOOL 2f6665894a3bc056c2fce18bb9c66b58e07a42c00f3c74e2a2193193ebf6cbb60d0f69859db0b543aa665121dc84023e0487263fa0c906cbe9bd55431bf6d0d6
 AUX 1.0.4-tk.patch 1797 SHA256 01127c8dcfcb52561afa3160a4a4deca26bd8ccd0c88fd706722947cfdb6ec58 SHA512 ca4af4ebe1f16cf59566256fefe24c4b90530adfa5655328102304f0ca2582fb5a9a5859640ddb5a7cec334acc229b142f00dd303b238d8e86c9b0095f167076 WHIRLPOOL c58ffe7ee6fd2a3cca4d5307465fcc56680f1bc08d9d8b2ca25340994ea8f882559df35289f8e3bc010f9bb560259eecce36d72b81c45a1baf2fb0eef7215b09
 AUX 1.0.7-libpng16.patch 1227 SHA256 979c71276d101f4e1dca7eaf024d496752ea267f07626806a11bce6d68616e6a SHA512 c01fda4ca376dac1952277585f9afdeb3f693ec591faf8e1d3a7804540f9e11f069df19cfa19a583605c1d054b0d25b55ccf977f0fc935501e14f702f4c25573 WHIRLPOOL 28ac423fce098375f3607b17b130e64f0961d636330b712ce8bb48e16ee129dfdfcb57c6c4f41b9665361b1c88130f470d0e72e6cf8f9afede6023c53284631f
-DIST imosflm-1.0.5.zip 1003847 SHA256 cda472f1be4b2e900552644d77705c33356f90c3f3d5763b2b527ccc471c0d5f SHA512 e0b2298750c4932dbab5b851bf7c6091ca5e1438306f3e21c6eb6c29166c046410e05fa37a2a9fbcda838ced4407a33c11e7ba00230bb4ae702de3838bf08b7b WHIRLPOOL f6fe5ea0568f16183313959fee156011abb1c018a5885a09badbea4879822c5ca5a4080c17fceeff00b8b28df091f6ff8ba80559daeb595e754266c54d739f73
 DIST imosflm-1.0.7.zip 941784 SHA256 b067261b4d7ef2f1f7581ddeaa08252d29f889acf89ce190eb0d8b30aa94b107 SHA512 f3163e1f71c5b1e24d6b3fbd5a040bbcebae25485d1258eef4b2725821f5f96c1260adb2bcc3ab57179d7b9b9e538ddf0494ab9b5be259b98d138fddacec8c77 WHIRLPOOL bd2b6bcdcc241fde41fe2ba99bd1e2f47bc444c46ee36a5b332d5c018b81a9d649378110a8bffa48ffc67a19b04ede7e61846b53a250e5fe3058ec0313fda80c
-EBUILD imosflm-1.0.5.ebuild 1820 SHA256 73a3d6ef011f269adbba145e295fde0e6ce6806ed586760893586d9f1666f4b3 SHA512 c37427683743039aa57f22b53b389aad39965ddec697883331b7869e68d9740683dc40b0b309860a5b869c36a8e5020d24a8d4f61dfe7b1026f2211e0b237940 WHIRLPOOL 9e4911bd8e2940e004b3535dfa3eaf2c66dd9e28998b36922e957bd0c976daa3043873f5fe877ac136aa4608221ab02f81a1ff5ae47ae796fab4615ad6ac8a01
 EBUILD imosflm-1.0.7-r1.ebuild 1287 SHA256 4f25a3629e3c28ab4173336ae2e4aaa4c51b0613c424ddb3459b54dd5acc8d4f SHA512 bd5f77a4acde50b14d9d375a39fa0a48c25381096794861f1d44d8841a521412959aade072d32301ce6ad055194f144601e916834849fb869ba1b0f269e16dcf WHIRLPOOL 183bdbd9c662d6e0f041d55123fe3af16814d4ea196e6677f1007789c92ce1a20f72b1adb1e9c4f370ad15304618fa19a10eb7934cafd35fac113a16d28ffef4
-MISC ChangeLog 1322 SHA256 c87e4d8e8f062d75af1234d387089910aa4b0c56d0928472451907e05adf76e2 SHA512 48214fe55e84243465bd4ede35a267bbcb72745bca561c6b1e9821a32cdc64168272e32f6cc69ed341ae8525815f37b8ca1ebc96c89477fe7fd3f521ef44c6d2 WHIRLPOOL 053a44d519fc5d439efd49f56828c5927dbb34c1886696877ab56502df39c76c55e112f71fbe94055d85acb5bd600d2a8d267f947d71ace19f9584deabfc4794
+MISC ChangeLog 1405 SHA256 672373c37a3e249e649947be467f645cb1e299c10a04af4f560fa918dd52186a SHA512 9dee4ceaf15996cbaf1958daef0077b30d69bf4c440942f1f9c721f60a54ee0e7a9feb9801c0b718c2caa5c763c880d13cc0cb0caeba4f1c772bc3ce7add7b5a WHIRLPOOL 98d2b658dfa7ff71f39d61805e4d55687a1f9a54b55b984b4e567b75c81ac09ee5569c1079f8ad4836caaa7eaf473afb742cfd8c656b038b94574fc9b946a7e1
 MISC metadata.xml 168 SHA256 705462092174cd3e2e3ec1557a28108a746b7351f803d8ca6d1b925b3111c3ff SHA512 f0073fb277e20adb7781aa6ea7f8237bc2d350f0aa43f0f0cca33e02cf52b8fc117bd984c11721ac519a2637ea145976148ac1aba7335dc74c42f7b9531cbed3 WHIRLPOOL 07dd7a302e695440f5033889e5b20cada57beedf17ad33f95d45fb5c39da98bf206eaff13334c20c1c08140a9c5e6041341d29c58efc5ca59b112b60e1662318
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iQIcBAEBCAAGBQJVxHltAAoJELp701BxlEWfazQP/0W9Pt15XYRPA1XTqBhxYsGx
-RJ2Jo8qO4cGTk30LwO8EuUVgGuMII2OCYnuPr2O/S30/iWXmUzgN+NM8hjXkV2Bw
-O/hSLufOy0C4sP9AGaTPJ6zXpCeLn7e6zOjwgoMuxhhpAe7bQeNO5hCsrgP8mgqV
-+rp5rhBkm/kvIXPDhB1iYqWoj5Rn8jVsLQi3DQtkF/9ctrDgMxKH8INMtWHjnAN7
-m2JHHIHiRpsbH80ju+B9mFeKTgIpYaZp/uQiaesCZm0Q6ZImxtif3wpc20W8YyHR
-gmqEAbugrwPZRlTNRl9zRS6RjK+GKeqRXVAGotlHYuHD4vDLU6KniKz48ndEsI3B
-+uNMkIj4l3YXOUDinL6aQiDWlFSxTLtd83HD2C/N2nU7q3a2MZmwKC2EysU4TdYU
-wXuBZA/y4bnm+1dDJUdouyYwXfsQFk9EFy+PWCUJEU7MHyP6UkJhaX7CkCL4PXiT
-TzREW05a5rBcEWj11X+1zFEtnuqtl/HyEI94CYXHEmIfkjB8RAT/xm/K8QQULxq0
-U3nq2R2YuRN8WZFHvhSHGJKUVAsUFGXpm+hBjLHaSTZB9uaLWJ4oO3BdgsB/PCRn
-WwG5vSnYG46nrC2me0hKEreOodIJwTStApHp3n2owCIyPibzg3t3tK1KkW0uJlUA
-gi7SKCauonhvs1i+9hYz
-=Z9fI
+iQJ8BAEBCgBmBQJVxH4vXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
+OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiSP4P/0AXwXLHkx3EXlN7PpHOO1eq
+8w1B2akPDXUXlUTy0N1KB6BL3npUnZ0UZsPoCMyrXOK+HPfLZyWXDSY2rTHUAz48
+lDLBUFK4fQdKXFMPq9S1C6XxkeTyYZrgPLQdy3tzIXHU02ekUoqhlIGY8ufJeWe7
+CKHQXEeLjkcwfeDHulR5+QcU6ExuMBL+gCo2C8IC6Vx9WVn7DVIEjtxjWMIo2IA2
+qSTm2+DfMw51nAvJ/wrJDX5a5BL+BVTs2FGhXuyZy/5f+yeL4FTLCZCN9eeqMoD1
+8WKqazWYc7dx4DiTW+Z32di3flAfHVRL+XLDynYsp7FRqeBRvXdvHdqxgTExhoPM
+US4Q/QspFOvxBtohIKA3e3LAPrh9IicwtqXpEo+vC3UNC/3ylNPJTPeFMrKO4D7g
+fDpMKYmimwQFRywfRwxqu5QtLFeDSww1yxwQTTbr41cok8fzrubNN11cE+uTmYMu
+VwbSeMSzCCab7EckpTqfT3DYPuNUApwJXXmnF3X0HoFZzKwr3QUf1OLb8SB/cHP9
+d4/v1BMtin7AdZoyu3QpUxt5ZlsqMRUbVYK5ErGPJ0kOV0MZ8t+5tGd8mVODDL+3
+Q7m0QxwFK9txqTjLGF1UYhHD+MA+xXzz1xkOFL7kPBf2n4YudCjEz0nesd08z3Gj
++CFaJSnLZUWP5Xs/s32J
+=lRZv
 -----END PGP SIGNATURE-----
