@@ -9,12 +9,22 @@ DIST suspend-1.0_p20150622.patch.xz 6052 SHA256 bc05a8896b89520b70a5c3b1a9903d94
 DIST suspend-utils-1.0.tar.bz2 408451 SHA256 0206ba6332860b6da57acc79cc0f8604150ef0835ff9633fd42d59d181a6c85d SHA512 481f7ab6e6d43b963cf7abf4d16a9911035dbce13d96e11eeadd50bbd2b9671c597eab0e3060536dcb0d6d848e30ac0e7ff534275fc2d66d2064b75066a4adb8 WHIRLPOOL 4321dcaeda4b5b7d822a1cade82b88094d8706d0daaa06b72d3c053a4bac14ed85b55a4681e0a52f116a63e3b8f4255c57e55fb43961f77149faf1b8aa918d58
 EBUILD suspend-1.0.ebuild 1440 SHA256 cbdbbbb7e1902a498ab55c00988364a9214c15b7ec245a7327d11d29f2d55a8a SHA512 65579985aa2f4a6d930fc589e7c3e8634da84d4af0091db3302e26d01a0f756dfb926dd1528a8d682f88472124602073e6ff7b45b9e3c138f0f11f3a27c10dd8 WHIRLPOOL ba4da4fee5482e72d8085bff447df6f6231240f60cfcf6426958e178f9310d067ea9b1f06df11458b60d759e4deca64e10a14e459e584f077ec000b48b7f6b21
 EBUILD suspend-1.0_p20150622.ebuild 1398 SHA256 fffa0fb89df4740bddf838b7c07afd6dce58af75a321df69d26c11328e2b793a SHA512 6f435acda69ae86335b4319d66e14d6558d240c0e70e018b5a4418c34bcd13478871d1d819e46c1ee2818c25d290919d2c2bdd637c7ac2bda585e94cc0e56ffe WHIRLPOOL 7c0c3ee87ecbc9a43c2afdab37866e8ab26de00f4f1070c40e67c40f27134577e5f84a057a806d880960b5c15466ea6650b00befdbe5c070e150585348047587
-MISC ChangeLog 4866 SHA256 46390f8036b23637b570c541d88b6148b01b08c0c6b4e8d393648ad17499df2b SHA512 f20de93cad9ee09237ae337878a70ae0e5f991b9e3b7fb127b217b0b93c42ed5fbc92004c87e034908daa2a6f153f5c49b18726435765b5696469640df499c4b WHIRLPOOL d18c56030ff18f182da66b76e307cd97e6e38deab265d32f094483142c2c75dc78f982e1624d27d6f0f8529e0a14e39402d74524606a89f91a18d7324bad46b2
-MISC metadata.xml 461 SHA256 9a633660373b250a0c2633df4c4d5439552549885bbbb335a9b113cbf74a997e SHA512 72562dca1980eb0f3cca95f5fd2b7d963fcb1ed20b3a8f7ff940b4508ea8e0da3c9ae700936778ca5f9cca02c902d159f9535f9c4bee907f11b1217090141ca6 WHIRLPOOL f97a9f3d85f1e996be58f0e2b46d32b2007b4270ae4f8d2e97ffd1553a417d7234f8b499bdda16f258771804a6917f0d44c2badcb282fad1db7d4f6c815ea85a
+MISC ChangeLog 4967 SHA256 aec9353f786f6cb97f8822f87e47b70161e9c23496d956ece1537c00cccdae7c SHA512 f903fb243fee5dbe6b9efdf664f67d6fc69d80db2f7453e237c81abcffe6d3fb69b2c5ecece22c5d32c0efadf31d795ed12d4c6f84a8fd47f619e7bec36f636b WHIRLPOOL bbbb84d8343d73216332b3b1b6c9fe8a5f52daf5c60d1c310d6c3932367594a24520e7fe3d72e6b56392bf3caaa19e633d22392ea9ea9a4f35f053d704e94b26
+MISC metadata.xml 558 SHA256 b15d247c198d3402fea974f061ece53a7441449b4face2a3f6deb93b19771e22 SHA512 f6eb018a8c159a30011364cbc07f2a33b9b1748c0bb1fcc6d3e4f119a71ffc3fef6631cb4281225c264dbd881a166edc0bb62a31e8fd612cab8c30c91c6e88d4 WHIRLPOOL 0d62dbc98b1cade91cd639f3708bb9ad6ae7f57ae4c42be7cbc1020f70ecbdbea85747908f7c7822de9eb423779b139d781e5973709e183489de128613e6e2c5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlXD13MACgkQknrdDGLu8JC1/QD6AtZFnAT96/8hPh/pzxKwYBqQ
-4ZIGvvdTPfb3QSvJb7sA/A2tjS9Oh+1OyxiksxLmMA2a8nc5Q+GGvJe8dx20HB+u
-=R3cc
+iQIcBAEBCAAGBQJVxH5LAAoJEPZTWjO6HuSNEb4P/1iHE2bpC2sQvfnUlfpz8Odp
+agUlkqn5DMv5Tyr7A9hNe1gaQhxndsYLMH7wFts0OJ33Q0Dsr+cDqztwywd41LtP
+lUCKakijj5NvNBySBjZia0CcU7oocD+iwVq/KoBUD+cH0GVBkoDUtB9b5wLhnhn1
+rI1zQ5VFyp2G02fqJI1X8lyR1OFcjPBmbWMO3GsGIiEfwRaw4QHb0MVX0btwO/No
+QooKdzgNvnLxDn7nOxfikyL8u8H8HVMT/5PtFhoskqRF2Jr8AAgW9tTCXm1GjxsF
+J7lAr4fGeLNutCY1ZDgC2uP3tUFRHT8pK6oZWXa9nW8SdHVf/BEqRGNAl0tkb6Af
+nLaC3hvQvIs1xu4ix70zWDokmdZror4YJEKJB8OBYdEmdqqjMqiEkmqujyeW0UdO
+QZo3fl8jWtDbBA28RyADuWEmc1VZVx1da+Gy+6lPRNjZSiiUyNkgOA2frQeALsav
+I2Cpn9FEffVTY8iGn4BeciakP4/9U13HqLSPgNu8gJ4Woy++EUr2V4r76goQbIwA
+P6EJ/Qd29Y2UditnbBCojsXRBBYM3mQh9rtZGUik0OgxPTdcaRWpM0fvIYWgbxkm
+qIBHdHYFkiKSbKQ9GemYsPhUL9qj4WRpSnt9kiQskGwEKE31LALhOJGSPHrw59rv
+C71G7BiyyD1UYeGWFfOb
+=OVcK
 -----END PGP SIGNATURE-----
