@@ -5,6 +5,10 @@
 		<email>xmw@gentoo.org</email>
 		<name>Michael Weber</name>
 	</maintainer>
+	<maintainer>
+		<email>bircoph@gentoo.org</email>
+		<name>Andrew Savchenko</name>
+	</maintainer>
 	<use>
 		<flag name="fbsplash">Add support for framebuffer splash</flag>
 		<flag name="crypt">Allows suspend and resume from encrypted disk</flag>
