@@ -1,6 +1,9 @@
 # ChangeLog for sci-chemistry/imosflm
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/imosflm/ChangeLog,v 1.19 2015/08/07 09:25:00 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/imosflm/ChangeLog,v 1.20 2015/08/07 09:45:18 jlec Exp $
+
+  07 Aug 2015; Justin Lecher <jlec@gentoo.org> -imosflm-1.0.5.ebuild:
+  Drop old
 
   07 Aug 2015; Agostino Sarubbo <ago@gentoo.org> imosflm-1.0.7-r1.ebuild:
   Stable for x86, wrt bug #543916
