@@ -1,6 +1,9 @@
 # ChangeLog for sys-power/suspend
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/suspend/ChangeLog,v 1.30 2015/08/06 21:53:54 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/suspend/ChangeLog,v 1.31 2015/08/07 09:45:35 bircoph Exp $
+
+  07 Aug 2015; Andrew Savchenko <bircoph@gentoo.org> metadata.xml:
+  Add myself to maintainers.
 
 *suspend-1.0_p20150622 (06 Aug 2015)
 
